hydroflow_plus_test/src/snapshots/hydroflow_plus_test__negation__tests__difference_static_tick@graphvis_mermaid.snap
---
source: hydroflow_plus_test/src/negation.rs
expression: "flow.meta_graph().unwrap().to_mermaid(&Default::default())"
---
%%{init:{'theme':'base','themeVariables':{'clusterBkg':'#ddd','clusterBorder':'#888'}}}%%
flowchart TD
classDef pullClass fill:#8af,stroke:#000,text-align:left,white-space:pre
classDef pushClass fill:#ff8,stroke:#000,text-align:left,white-space:pre
classDef otherClass fill:#fdc,stroke:#000,text-align:left,white-space:pre
linkStyle default stroke:#aaa
1v1[\"<div style=text-align:center>(1v1)</div> <code>source_iter({<br>    use crate::__staged::negation::*;<br>    0..5<br>})</code>"/]:::pullClass
3v1[\"<div style=text-align:center>(3v1)</div> <code>source_iter({<br>    use crate::__staged::negation::*;<br>    3..6<br>})</code>"/]:::pullClass
5v1[\"(5v1) <code>persist()</code>"/]:::pullClass
7v1[\"(7v1) <code>difference::&lt;'tick, 'tick&gt;()</code>"/]:::pullClass
8v3["(8v3) <code>handoff</code>"]:::otherClass
9v1[/"<div style=text-align:center>(9v1)</div> <code>for_each({<br>    use crate::__staged::negation::*;<br>    let output = output;<br>    |v| {<br>        output.send(v).unwrap();<br>    }<br>})</code>"\]:::pushClass
1v1-->5v1
8v3--x|neg|7v1; linkStyle 1 stroke:red
5v1-->|pos|7v1
3v1-->8v3
7v1-->9v1
subgraph sg_1v1 ["sg_1v1 stratum 0"]
    3v1
    subgraph sg_1v1_var_stream_1 ["var <tt>stream_1</tt>"]
        3v1
    end
end
subgraph sg_2v1 ["sg_2v1 stratum 1"]
    1v1
    5v1
    7v1
    9v1
    subgraph sg_2v1_var_stream_0 ["var <tt>stream_0</tt>"]
        1v1
    end
    subgraph sg_2v1_var_stream_2 ["var <tt>stream_2</tt>"]
        7v1
    end
    subgraph sg_2v1_var_stream_3 ["var <tt>stream_3</tt>"]
        5v1
    end
end

